# otio-m3u8-adapter

./: README.md  pyproject.toml
src/otio_m3u8_adapter/: plugin_manifest.json
src/otio_m3u8_adapter/adapters/: m3u8_adapter.py  m3u8d_adapter.py
