[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otio-m3u8-adapter"
version = "0.0.1"
authors = [
  { name="Leigh Smith", email="leigh@leighsmith.com" },
]
description = "An OTIO adapter to the m3u8 playlist format"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Display",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]
keywords = ["film", "tv", "editing", "editorial", "edit", "non-linear", "time", "otio", "otio-adapter"]

[project.urls]
"Homepage" = "https://github.com/leighsmith/otio-m3u8-adapter"
"Bug Tracker" = "https://github.com/leighsmith/otio-m3u8-adapter/issues"

[project.entry-points."opentimelineio.plugins"]
your_otio_plugin = "otio_m3u8_adapter"

[tool.hatch.build.targets.sdist]
# Ensure the sdist includes a setup.py for older pip versions
support-legacy = true
exclude = [".github"]
